--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0; url=https://github.com/pritish02/Nagarro-assignments/blob/main/assignment3/index.html">
+    <meta http-equiv="refresh" content="0; url=assignment3/index.html">
 </head>
 <body> 
 </body>
